# dataclay

./: .dockerignore  .flake8  .gitignore  .gitmodules  .readthedocs.yml  .rsync-filter  .travis.yml  ACKNOWLEDGMENTS.md  CHANGES.rst  Dockerfile  Dockerfile.dev  Dockerfile.legacy-deps  Dockerfile.legacy-deps.dev  LICENSE.txt  MANIFEST.in  PUBLISH.md  README.md  appveyor.yml  compile-protos.sh  compile_protos.py  compile_protos.sh  coverage.xml  deploy_pypi.sh  docker-compose.yml  dynamic_dependencies.py  noxfile.py  protobufferize.xml  pyproject.toml  release.sh  requirements-dev.txt  requirements-legacydeps.txt  requirements.txt  setup.cfg  setup.py  tox.ini  trace
.appveyor/: deploy.yml  test.yml
.appveyor/local/: deploy.yml  test.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: docker-publish.yml  publish-docker-image.yml  tests.yml  tox-tests.yml
.travis/: check_branch.sh  git_tag.sh  github_deploy_key.enc  new_version.sh  set_ssh.sh
UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
addons/storage/: README.md  dependency-reduced-pom.xml  pom.xml  storage_props_example
addons/storage/scripts/: storage_init.sh
docs/: README.md  advanced-usage.rst  alien-objects.rst  compss-integration.rst  conf.py  contributing.rst  dataclay.rst  deployment.rst  grpc_api.rst  hpc-tracing.rst  index.rst  logging.rst  main-concepts.rst  storageapi.rst  stub-objects.rst  telemetry.rst  user-guide.rst  virtual-objects.rst
docs/contrib/: index.rst  middleware.rst  mqtt.rst  nvm.rst  oidc.rst  zenoh.rst
docs/deployment/: compile-redis.rst  docker-deployment.rst  envvars.rst  hpc-manual-deployment.rst  management.rst  proxy.rst
docs/examples/: hello-family.rst  index.rst  mqtt.rst  quickstart.rst  zenoh.rst
docs/reference/: aliendco.rst  annotations.rst  dataclay.client.rst  dataclay.exceptions.rst  dataclay.metadata.rst  index.rst  stubdco.rst  virtual_dco.rst
docs/releasenotes/: 3-x.rst  4-x.rst
docs/source/: advanced-usage.rst  api.rst  conf.py  contributing.rst  deployment.rst  index.rst  main-concepts.rst  quickstart.rst  user-guide.rst
docs/source/api/: backend_api.rst  client_api.rst  dataclay_object_api.rst
docs/source/developers/: compile_redis.rst
docs/source/examples/: hello-family.rst  index.rst  quickstart.rst
docs/source/getting_started/: main_concepts.rst
docs/source/reference/: index.rst
docs/telemetry/: configuration.rst  hpc-tracing.rst  offline.rst  prometheus.rst  real-time.rst
examples/: README.md
examples/async-client/: client.py
examples/benchmarks/b1/: .env  client.py  client_compss.py  client_xxx.py  job.sh  job_redis_cluster.sh  results.md  run.sh  run_compss.sh
examples/benchmarks/b2/: .env  client.py  client_compss.py  job.sh  job_redis_cluster.sh  results.md  run_compss.sh
examples/benchmarks/b3/: client.py  job.sh  (+2 more)
examples/client-logger-config/: client.py  docker-compose.yaml
examples/client-start-stop/: client.py
examples/compss-app/: client.py  run_compss.sh
examples/compss-local/: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
examples/dds/: cfg  client.py  docker-compose.yml  pip
examples/grafana-tempo/: .gitignore  client.py  dashboard.json  docker-compose.yaml
examples/hello-family/: .env  client.py  docker-compose.yml  job.sh  script.py
examples/keycloak-auth/: README.md  authorized_access.py  client.py  compose.yaml  middleware.py  middleware_val.py  no_logged_access.py  proxy_config.py  public_access.py  unauthorized_access.py
examples/matrix-operations/: .env  client.py  job.sh  matrix-generator.py  script.py
examples/method-constraints/: client.py
examples/mqtt/: docker-compose.yml  receiver.py  sender.py
examples/multithread-client/: client.py
examples/persistence/: .gitignore  README.md  client.py  docker-compose.yml
examples/prometheus-pushgateway/: README.md  client.py  docker-compose.yaml
examples/proxy/: client.py  docker-compose.yml
examples/proxy_acl/: README.md  client_alice.py  client_async.py  client_bob.py  client_charlie.py  client_owner.py  create_users.py  docker-compose.yml  middleware.py  proxy_config.py
examples/quickstart/: docker-compose.yml  script.py
examples/redis-cluster/: docker-compose.yml  job.sh
examples/stub/: client.py  docker-compose.yml
examples/telemetry-json-traces/: .gitignore  README.md  docker-compose.yaml  otel-json-to-tempo.yaml
examples/test/: client.py
examples/tracing/: README.md
examples/zenoh/: docker-compose.yml  sensor.py  subscriber.py
extrae/: compile_wrapper.sh  extrae_wrapper.c  extrae_wrapper.h
features/: make_persistent.feature
orchestration/mn4/: .gitignore  README.md  config.sh  install-to-mn4.sh  install_all.sh  modulefile.lua  setup-mn4.sh  sync-examples.sh  sync-to-mn4.sh  sync_all.sh
orchestration/mn5/: README.md  install_all.sh  modulefile.lua  sync_all.sh  sync_examples.sh
orchestration/spack/: README.MD  README.md  repo.yaml
scripts/: count-backend-objects.sh  eget  new-backend  rebalance.py  rget
src/dataclay/: DataClayObjMethods.py  DataClayObjProperties.py  DataClayObject.py  DataClayObjectExtraData.py  __init__.py  alien.py  annotated.py  config.py  data_manager.py  dataclay_object.py  event_loop.py  exceptions.py  lock_manager.py  runtime.py  stub.py  virtual_dco.py
src/storage/: __init__.py  api.py
test_scripts/: .gitignore  README  run_functional_tests.sh  run_functional_tests_local.sh
tests/: conftest.py  docker-compose.yml
tests/bbd-functional/: test_client.py
tests/functional/: .env  conftest.py  docker-compose.legacy-deps.yml  docker-compose.yml  test_activemethod.py  test_alias.py  test_alias_error.py  test_alien.py  test_client.py  test_concurrency.py  test_getstate.py  test_heapmanager.py  test_make_persistent.py  test_move_object.py  test_new_replica.py  test_store_methods.py  test_stub_object.py  test_versioning.py  test_versioning_error.py  utils.py
tests/mock/: dataclay_logger.py  mock_exec_env.py  mockdataclay.py  simplemock.py
tests/proxy/: conftest.py
tests/test_dataclay/: test_utils.py
tests/unit/: test_readwritelock.py
(+887 files in other folders)
