[metadata]
name = dataClay
version = 3.0.0-alpha.1
description = Python library for dataClay
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.bsc.es/dataclay
project_urls =
    Documentation = https://pyclay.readthedocs.io/en/latest/
    Source = https://github.com/bsc-dom/pyclay
license = BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Database :: Database Engines/Servers
    Topic :: System :: Distributed Computing
    Topic :: Software Development :: Libraries :: Application Frameworks

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by 'pip install'. See instead 'python_requires' below.
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    dataclay-common
    grpcio
    numpy
    protobuf~=3.20.0
    psutil
    # PyYAML~=6.0
    etcd3
    bcrypt
    passlib
    opentelemetry-api
include_package_data = True

[options.extras_require]
dev = 
    grpcio-tools

# [options.entry_points]
# console_scripts = 
#     dataclay-executionenv = dataclay.backend.__main__:run_main

[options.packages.find]
where = src

[options.package_data]
* = *.properties
